# paceforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 36b9d7be4e21_initial_schema.py  384d18c6e747_add_user_settings_and_weekly_digests.py  a1b2c3d4e890_add_email_password_auth.py  b2c3d4e5f678_add_routes_and_simulations.py  b2c3d4e5f901_add_user_feedback_fields.py  c3d4e5f6g789_add_generated_plans.py  c5a8f2d1e903_add_weight_and_chat_messages.py  d4e5f6g7h890_add_target_time_to_routes.py  d7f3a1b2c456_add_initial_sync_done.py  e5f6g7h8i901_add_race_date_start_hour.py  e8a3b5c7d912_add_streams_and_computed_metrics.py  f1a2b3c4d567_add_per_user_strava_credentials.py
app/: celery_app.py  config.py  crypto.py  database.py  dependencies.py  exceptions.py  main.py
app/models/: __init__.py  activity.py  analysis.py  chat_message.py  generated_plan.py  route.py  user.py  weekly_digest.py
app/prompts/: coach_chat.py  coaching.py  race_strategy.py  training_plan.py  weekly_digest.py  workout.py
app/routers/: activity.py  api.py  auth.py  coach.py  dashboard.py  digest.py  settings.py  simulator.py  trends.py  webhook.py  workout.py
app/schemas/: activity.py  analysis.py  readiness.py  simulator.py  (+6 more)
src/: middleware.ts
tests/: conftest.py  test_analysis_service.py  test_auth.py  test_claude_service.py  test_strava_service.py  test_training_load.py  test_webhook.py
(+252 files in other folders)
